<resources>
    <string name="app_name">EldarWallet</string>
    <string name="debt">Saldo</string>
    <string name="add_card">Añadir tarjeta</string>
    <string name="cards">Tarjetas</string>
    <string name="payments_methods">Medios de pago</string>
    <string name="login">Iniciar sesión</string>
    <string name="name_label">Ingrese su nombre</string>
    <string name="name_hint">Nombre...</string>
    <string name="last_name_label">Ingrese su apellido</string>
    <string name="last_name_hint">Apellido...</string>
    <string name="continue_label">Continuar</string>
    <string name="required_field">Campo obligatorio</string>
    <string name="no_card_registered">No hay tarjetas registradas</string>
    <string name="card_number_label">Ingrese el número de tarjeta</string>
    <string name="card_number_hint">Número de tarjeta...</string>
    <string name="card_due_date_label">Ingrese la fecha de vencimiento</string>
    <string name="card_due_date_hint">Fecha de vencimiento...</string>
    <string name="card_security_code_label">Ingrese el código de seguridad</string>
    <string name="card_security_code_hint">Código de seguridad...</string>
    <string name="create_card">Crear tarjeta</string>
    <string name="card_detail">Detalle de tarjeta</string>
    <string name="card_number">Número de tarjeta</string>
    <string name="due_date">Fecha de vencimiento</string>
    <string name="security_code">Código de seguridad</string>
    <string name="card_already_registered">Esta tarjeta ya se encuentra registrada en el sistema</string>
    <string name="registration_failed">No se ha podido registrar la tarjeta en el sistema</string>
    <string name="checkout_title_label">Pagar con</string>
</resources>