<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.CardFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/card_guideline_horizontal_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.025" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/card_guideline_horizontal_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.175" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/card_guideline_horizontal_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.975" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/card_guideline_vertical_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/card_guideline_vertical_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/card_tv_title"
        style="@style/poppinsBold"
        android:text="@string/add_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/card_guideline_horizontal_1" />

    <TextView
        android:id="@+id/card_tv_number_label"
        style="@style/poppinsSemiBold"
        android:layout_marginTop="15dp"
        android:text="@string/card_number_label"
        app:layout_constraintBottom_toBottomOf="@+id/card_guideline_horizontal_2"
        app:layout_constraintStart_toStartOf="@+id/card_guideline_vertical_1" />

    <EditText
        android:id="@+id/card_et_number"
        style="@style/editText"
        android:hint="@string/card_number_hint"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/card_guideline_vertical_2"
        app:layout_constraintStart_toStartOf="@+id/card_guideline_vertical_1"
        app:layout_constraintTop_toBottomOf="@+id/card_tv_number_label" />

    <TextView
        android:id="@+id/card_tv_due_date_label"
        style="@style/poppinsSemiBold"
        android:layout_marginTop="20dp"
        android:text="@string/card_due_date_label"
        app:layout_constraintStart_toStartOf="@+id/card_guideline_vertical_1"
        app:layout_constraintTop_toBottomOf="@+id/card_et_number" />

    <EditText
        android:id="@+id/card_et_due_date"
        style="@style/editText"
        android:hint="@string/card_due_date_hint"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/card_guideline_vertical_2"
        app:layout_constraintStart_toStartOf="@+id/card_guideline_vertical_1"
        app:layout_constraintTop_toBottomOf="@+id/card_tv_due_date_label" />

    <TextView
        android:id="@+id/card_tv_security_code_label"
        style="@style/poppinsSemiBold"
        android:layout_marginTop="20dp"
        android:text="@string/card_security_code_label"
        app:layout_constraintStart_toStartOf="@+id/card_guideline_vertical_1"
        app:layout_constraintTop_toBottomOf="@+id/card_et_due_date" />

    <EditText
        android:id="@+id/card_et_security_code"
        style="@style/editText"
        android:hint="@string/card_security_code_hint"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/card_guideline_vertical_2"
        app:layout_constraintStart_toStartOf="@+id/card_guideline_vertical_1"
        app:layout_constraintTop_toBottomOf="@+id/card_tv_security_code_label" />

    <TextView
        android:id="@+id/card_tv_create"
        style="@style/textView"
        android:text="@string/create_card"
        app:layout_constraintBottom_toTopOf="@+id/card_guideline_horizontal_3"
        app:layout_constraintEnd_toStartOf="@+id/card_guideline_vertical_2"
        app:layout_constraintStart_toStartOf="@+id/card_guideline_vertical_1" />

</androidx.constraintlayout.widget.ConstraintLayout>