<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guideline_horizontal_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.025" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guideline_horizontal_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.175" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guideline_horizontal_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.975" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guideline_vertical_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guideline_vertical_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        style="@style/poppinsBold"
        android:text="@string/login"
        app:layout_constraintEnd_toStartOf="@+id/login_guideline_vertical_2"
        app:layout_constraintStart_toStartOf="@+id/login_guideline_vertical_1"
        app:layout_constraintTop_toTopOf="@+id/login_guideline_horizontal_1" />

    <TextView
        android:id="@+id/login_tv_name_label"
        style="@style/poppinsSemiBold"
        android:text="@string/name_label"
        app:layout_constraintBottom_toTopOf="@+id/login_guideline_horizontal_2"
        app:layout_constraintStart_toStartOf="@+id/login_guideline_vertical_1" />

    <EditText
        android:id="@+id/login_et_name"
        style="@style/loginEt"
        android:hint="@string/name_hint"
        app:layout_constraintEnd_toStartOf="@+id/login_guideline_vertical_2"
        app:layout_constraintStart_toStartOf="@+id/login_guideline_vertical_1"
        app:layout_constraintTop_toTopOf="@+id/login_guideline_horizontal_2" />

    <TextView
        android:id="@+id/login_tv_last_name_label"
        style="@style/poppinsSemiBold"
        android:layout_marginTop="20dp"
        android:text="@string/last_name_label"
        app:layout_constraintStart_toStartOf="@+id/login_guideline_vertical_1"
        app:layout_constraintTop_toBottomOf="@+id/login_et_name" />

    <EditText
        android:id="@+id/login_et_last_name"
        style="@style/loginEt"
        android:hint="@string/last_name_hint"
        app:layout_constraintEnd_toStartOf="@+id/login_guideline_vertical_2"
        app:layout_constraintStart_toStartOf="@+id/login_guideline_vertical_1"
        app:layout_constraintTop_toBottomOf="@+id/login_tv_last_name_label" />

    <TextView
        android:id="@+id/login_tv_continue"
        style="@style/continueTv"
        app:layout_constraintBottom_toTopOf="@+id/login_guideline_horizontal_3"
        app:layout_constraintEnd_toStartOf="@+id/login_guideline_vertical_2"
        app:layout_constraintStart_toStartOf="@+id/login_guideline_vertical_1" />

</androidx.constraintlayout.widget.ConstraintLayout>